--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,7 @@ play.editor="http://localhost:63342/api/file/?file=%s&line=%s"
 # to map through to internal messages, or allow the language to be stored in a cookie.
 play.i18n {
   # The application languages
-  langs = [ "en" ]
+  langs = [ "en", "es" ]
 
   # Whether the language cookie should be secure or not
   #langCookieSecure = true
