First version - layout

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -272,7 +272,7 @@ play.filters {
     #permittedCrossDomainPolicies = "master-only"
 
     # The Content-Security-Policy header. If null, the header is not set.
-    contentSecurityPolicy = "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'sha256-ZLCIFyYM/RjnrAoqBDIxdnwIO4x4QlSbXWnpqkD5h7w=';"
+    contentSecurityPolicy = "default-src 'self'; style-src 'self' 'unsafe-inline'; img-src * 'self' data: https:; script-src 'self' 'sha256-ZLCIFyYM/RjnrAoqBDIxdnwIO4x4QlSbXWnpqkD5h7w=';"
   }
 
   ## Allowed hosts filter configuration
