--- a/conf/application.conf
+++ b/conf/application.conf
@@ -333,6 +333,10 @@ play.db {
 # EBean: https://playframework.com/documentation/latest/JavaEbean
 # Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
 #
+slick.dbs.default.profile="slick.jdbc.H2Profile$"
+slick.dbs.default.db.driver="org.h2.Driver"
+slick.dbs.default.db.url="jdbc:h2:mem:play;MODE=MYSQL;DB_CLOSE_DELAY=-1"
+
 db {
   # You can declare as many datasources as you want.
   # By convention, the default datasource is named `default`
