--- a/conf/application.conf
+++ b/conf/application.conf
@@ -333,9 +333,14 @@ play.db {
 # EBean: https://playframework.com/documentation/latest/JavaEbean
 # Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
 #
-slick.dbs.default.profile="slick.jdbc.H2Profile$"
-slick.dbs.default.db.driver="org.h2.Driver"
-slick.dbs.default.db.url="jdbc:h2:mem:play;MODE=MYSQL;DB_CLOSE_DELAY=-1"
+
+slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
+slick.dbs.default.driver="slick.driver.PostgresqlDriver$"
+slick.dbs.default.db.driver="org.postgresql.Driver"
+slick.dbs.default.db.url="jdbc:postgresql://172.17.0.2/mytestdb"
+slick.dbs.default.db.user="postgres"
+slick.dbs.default.db.password="docker"
+
 
 db {
   # You can declare as many datasources as you want.
